# tikh_email_parser

./: Cargo.toml  Makefile  Readme.md  emails.txt
src/: grammar.pest  lib.rs  main.rs
tests/: email_tests.rs
